--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         }
 
         .hero-section {
-            min-height: 80vh;
+            min-height: 90vh;
             background: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url(images/banner.jpg) no-repeat;
             background-size: cover;
         }
@@ -82,26 +82,22 @@
             </div>
         </nav>
         <section class="hero-section d-flex justify-content-center align-items-center text-white">
-            <div class="mx-4">
+            <div class="mx-4 mt-4">
                 <h3 class="fs-3">It is created to watch your health</h3>
                 <h1 class="fw-bold display-5 my-2 my-sm-3">Health Tracker App</h1>
                 <form action="#">
-                    <div class="row">
-                        <div class="col-12 col-sm-8">
-                            <input type="email" placeholder="Email Address" class="form-control p-sm-3">
-                        </div>
-                        <div class="col-12 col-sm-4 mt-3 mt-sm-0">
-                            <button class="btn btn-success p-sm-3">Get App</button>
-                        </div>
+                    <div class="d-flex my-5">
+                        <input type="email" placeholder="Email Address"
+                            class="form-control w-50 p-1 p-sm-3 me-2 me-sm-4 fs-5">
+                        <a href="#" class="btn btn-primary w-50 p-1 p-sm-3 fs-5">Get App</a>
                     </div>
-
                 </form>
             </div>
         </section>
     </header>
 
     <main>
-        <!-- first section -->
+        <!-- progress section -->
         <section class="p-5 m-md-5 d-sm-flex justify-content-around text-center">
             <div class="mb-4 mb-sm-0">
                 <h1>100+</h1>
@@ -121,8 +117,8 @@
             </div>
         </section>
 
-        <!-- second section -->
-        <section style="background: #F7F9FF" class="p-3 p-md-5 m-md-4">
+        <!-- goal section -->
+        <section style="background: #F7F9FF" class="p-4 p-sm-5 m-md-4">
             <div class="row">
                 <div class="col-12 col-md-8 d-flex flex-column justify-content-center">
                     <h2 class="fs-1 my-3">Activity Goals To Improve Health</h2>
@@ -139,7 +135,7 @@
             </div>
         </section>
 
-        <!-- third section -->
+        <!-- learn more section -->
         <section class="text-center p-4">
             <div class="container mb-5">
                 <h2 class="fs-1 my-3">Learn more about our application</h2>
@@ -224,7 +220,7 @@
             </div>
         </section>
 
-        <!-- fourth section -->
+        <!-- gallary section -->
         <section class="text-center gallary my-5">
             <div class="container">
                 <h2 class="fs-1 my-5">Look at our application</h2>
@@ -254,19 +250,25 @@
             </div>
         </section>
 
-        <!-- fifth section -->
+        <!-- starter plan section -->
 
         <section style="background-color: #F7F9FF;" class="text-center p-5">
             <div class="container">
-                <h1 class="display-5">Start using our app today</h1>
-                <p class="fs-4 fw-light">Being active is important to our health, but how much or what kind of activity
-                    do you
-                    need?</p>
+                <div class="row">
+                    <div class="col">
+                        <h1 class="display-5">Start using our app today</h1>
+                        <p class="fs-4 fw-light">Being active is important to our health, but how much or what kind of
+                            activity
+                            do you
+                            need?</p>
+                    </div>
+                </div>
             </div>
 
+            <!-- starter plan -->
             <div class="container-fluid mt-5">
                 <div class="row">
-                    <div class="col-md-4 offset-md-2 mb-3 mb-md-0">
+                    <div class="col-12 col-md-4 offset-md-2 mb-3 mb-md-0">
                         <div class="card p-4">
                             <div class="card-body">
                                 <h2 class="fs-1 fw-bold">Starter Plan</h2>
@@ -283,7 +285,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-12 col-md-4">
                         <div class="card p-4">
                             <div class="card-body">
                                 <h2 class="fs-1 fw-bold">Starter Plan</h2>
@@ -292,9 +294,9 @@
                                         class="fs-5 text-normal">HEART POINTS</span></p>
                                 <p><i class="fas fa-check fs-4 text-primary me-2"></i><span
                                         class="fs-5 text-normal">MOVE MINUTES</span> </p>
-                                <p><i class="fas fa-times fs-4 text-primary me-2"></i><span
+                                <p><i class="fas fa-check fs-4 text-primary me-2"></i><span
                                         class="fs-5 text-normal">FITNESS ASSESSMENT</span></p>
-                                <p><i class="fas fa-times fs-4 text-primary me-2"></i><span
+                                <p><i class="fas fa-check fs-4 text-primary me-2"></i><span
                                         class="fs-5 text-normal">NUTRITIONAL SUCCESS</span></p>
                                 <a href="#" class="btn btn-outline-primary p-2">Get Access Now</a>
                             </div>
@@ -358,7 +360,7 @@
                     </div>
                     <div class="col-sm-6 col-md-3">
                         <div class="bg-white shadow p-3 mb-5 mb-md-0">
-                            <img style="margin-top: -70px" class="img-fluid rounded-circle" src="images/person-1.jpg"
+                            <img style="margin-top: -70px" class="img-fluid rounded-circle" src="images/person-2.jpg"
                                 width="164" height="164">
                             <h4 class="mt-4">Jason Doe</h4>
                             <h5>Programmer</h5>
@@ -368,7 +370,7 @@
                     </div>
                     <div class="col-sm-6 col-md-3">
                         <div class="bg-white shadow p-3 mb-5 mb-md-0">
-                            <img style="margin-top: -70px" class="img-fluid rounded-circle" src="images/person-1.jpg"
+                            <img style="margin-top: -70px" class="img-fluid rounded-circle" src="images/person-3.jpg"
                                 width="164" height="164">
                             <h4 class="mt-4">Jason Doe</h4>
                             <h5>Programmer</h5>
@@ -378,7 +380,7 @@
                     </div>
                     <div class="col-sm-6 col-md-3">
                         <div class="bg-white shadow p-3 mb-5 mb-md-0">
-                            <img style="margin-top: -70px" class="img-fluid rounded-circle" src="images/person-1.jpg"
+                            <img style="margin-top: -70px" class="img-fluid rounded-circle" src="images/person-4.jpg"
                                 width="164" height="164">
                             <h4 class="mt-4">Jason Doe</h4>
                             <h5>Programmer</h5>
@@ -391,7 +393,75 @@
             </div>
         </section>
 
+        <!-- contact section -->
+
+        <section class="text-center p-2 p-sm-5">
+            <div class="container mb-5">
+                <p class="fs-4 fw-light">We need to know your opinion</p>
+                <h1 class="display-5 fw-normal">Write to us and we will contact you</h1>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-lg-6 offset-lg-3">
+                        <div class="row">
+                            <div class="col-12 my-3">
+                                <input type="email" placeholder="Email Address" class="form-control p-3">
+                            </div>
+                            <div class="col-6 my-3">
+                                <input type="text" class="form-control p-3" placeholder="Name" aria-label="First name">
+                            </div>
+                            <div class="col-6 my-3">
+                                <input type="tel" class="form-control p-3" placeholder="Your Phone"
+                                    aria-label="Last name">
+                            </div>
+                            <div class="col-12 my-3">
+                                <textarea class="form-control p-3" name="message" id="" cols="30" rows="10"
+                                    placeholder="Message"></textarea>
+                            </div>
+                            <div class="col-12 my-3">
+                                <button class="btn btn-primary p-3">Contact Us</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- get app section -->
+
+        <section class="text-center p-2 p-sm-5 my-4">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-lg-6 offset-lg-3">
+                        <p class="fs-4 fw-light">It is created to watch your health</p>
+                        <h1 class="display-5 fw-normal">Get our app for Android and iPhone</h1>
+                        <div class="my-5 d-flex justify-content-center">
+                            <button class="btn btn-outline-success p-1 p-sm-3 fs-3 me-3"><i
+                                    class="fab fa-apple me-2"></i>App
+                                Store</button>
+
+                            <button class="btn btn-success p-1 p-sm-3 fs-3"><i class="fas fa-robot me-2"></i>App
+                                Store</button>
+                        </div>
+                        <img class="img-fluid" src="images/gallary-3.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
+
+    <!-- footer section starts -->
+
+    <footer class="py-4 text-center" style="background-color: #F7F9FF;">
+        <div class="container">
+            <div class="row">
+                <div class="co-12">
+                    <p class="mb-0 fs-4">&copy; Copyright 2018 Mobirise - All Rights Reserved</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
 
