--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
 
         <!-- get app section -->
 
-        <section class="text-center p-2 p-sm-5 my-4">
+        <section class="text-center p-2 p-sm-5">
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-lg-6 offset-lg-3">
